  repository, web/src)
  (friebe)
- Deprecated HTTP_* constants, use peer.http.HttpConstants class 
  constants instead.
  (kiesel)
- Deprecated global constants in scriptlet.xml.XMLScriptletResponse
  in favor of class constants
  (kiesel)
- Made scriptlet.xml.workflow.checkers.ParamChecker and 
  scriptlet.xml.workflow.casters.ParamCaster abstract.
  (kiesel)

Bugfixes
~~~~~~~~
- Fixed endless recursion in text.util.RandomCodeGenerator class
  (kiesel, Tom Geiger)
- Fixed text.util.RandomCodeGenerator not being able to generate codes
  longer than 44 characters
  (friebe)
- Added fix to catch submission of malicious request data in 
  scriptlet.xml.XMLScriptletResponse.
  (kiesel)

Features
~~~~~~~~
- org.bugzilla.gateway.BugMessage class now inhertits methods from
  peer.mail.MimeMessage class instead of peer.mail.Message class to
  support file attachments
  (toennishoff)
- Added a setBody() method to peer.mail.MimeMessage class to add more 
  compatibility to peer.mail.Message and to support older bedavior of
  org.bugzilla.gateway.BugMessage class
  (toennishoff)


Version 5.7.2, released 2009-03-27
----------------------------------
SVN version: 12947

Heads up!
~~~~~~~~~
- Removed xp-net.xp_framework-{VERSION}.xar from boot classpath. It is
  no longer required for runners, that's all in xp-tools-${VERSION}.xar.
  See http://news.xp-framework.net/article/290/2009/03/27/
  (friebe)

RFCs
~~~~
- Implemented RFC #0087 - Move class details information to ClassLoader
  (friebe)
- Implemented RFC #0174 - io.collections interface additions / io.streams 
  integration
  (friebe)

- Implemented RFC #0167 - RDBMS and Timezones
  (gelli)

Features
~~~~~~~~
- Added lang.Primitive::wrapperClass() method
  (friebe)
- Included type information in unittest.AssertionFailedError's message
  See http://news.xp-framework.net/article/291/2009/03/28/
  (friebe)
- Included prerequisites in unittest.PrerequisitesNotMetError's message
  (friebe)